--- a/ElementosSemânticos.html
+++ b/ElementosSemânticos.html
@@ -12,7 +12,7 @@
         <p>Bem-Vindo ao exemplo de HTML</p>
     </header>
     <nav style="background-color: beige;">
-        <a href="aula5.html">Arquivo aula_5</a> <br>
+        <a href="./aula5.html">Arquivo aula_5</a> <br>
         <a href="/site/pg.html">Arquivo do site pg 1</a>
     </nav>
 
