--- a/aula_3/turistasemteresopolis.html
+++ b/aula_3/turistasemteresopolis.html
@@ -2,63 +2,86 @@
 <html lang="pt-br">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo em Teresópolis - Pontos Turísticos</title>
+
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
-<body>
+<body class="body">
     <header>
-        <h1>Turismo em Teresópolis</h1>
+        <div class="centralizar-texto">
+            <hr class="centralizar">
+            <p class="centralizar">Turismo em Teresópolis - Pontos Turísticos.</p>
+        </div>
 
-        <p>Confira os melhores pontos turísticos da cidade!</p>
+        <title>Turismo em Teresópolis - Pontos Turísticos</title>
+        <h1 class="centralizar"><span class="sublinhado">Turismo em Teresópolis - Pontos Turísticos</span></h1>
+
+        <p class="centralizar"><i>Confira os melhores pontos turísticos da cidade!</i></p>
     </header>
     <!-- A tag <main> serve para envolver o conteúdo principal e único da sua página. Pense nela como o "corpo" do seu documento. -->
     <main>
         <section>
-            <h2>Feirinha do Alto</h2>
-            <hr>
-            <p>A Feirinha do Alto, localizada no bairro do Alto, logo na entrada de Teresópolis, é um dos principais
-                pontos turísticos da cidade, com uma grande variedade de artesanato, gastronomia e música.</p>
-            <li>A Feirinha do alto sempre foi muito conhecida justamente por ser o grande ponto turístico de Teresópolis
-                por simplesmente estar na entrada da cidade, atraindo diversos turistas!</li>
-
-            <figure>
-
-                <img src="feirinha-do-alto.jpg" width="400 " height="200"
-                    alt="Vista da Feirinha do Alto, com barracas de artesanato, shows e pessoas circulando.">
-                <a href="feirinhadoalto.html" target="_blank">Vamos lá!</a>
-
-                <figcaption>Fonte: Cacau Reporter</figcaption>
+            <hr class="linha-colorida">
+            <h2 class="centralizar">Feirinha do Alto:</h2>
+            <ul class="centralizar">
+                <li class="text-feirinha-paragrafo1">A Feirinha do Alto, localizada no bairro do Alto, logo na entrada
+                    de Teresópolis, é um dos principais pontos turísticos da cidade, com uma grande variedade de
+                    artesanato, gastronomia e música.</li>
+                <li class="txt-feirinha-do-alto2">A Feirinha do Alto sempre foi muito conhecida justamente por ser o
+                    grande ponto turístico de Teresópolis por simplesmente estar na entrada da cidade, atraindo diversos
+                    turistas!</li>
 
 
+                <div>
+                    <figure>
+                        <img style="border: 1px solid black; box-shadow: 5px 5px 15px black;" src="feirinha-do-alto.jpg" width="400" height="200"
+                            alt="Vista da Feirinha do Alto, com barracas de artesanato, shows e pessoas circulando.">
+                        <br>
+                        <a href="feirinhadoalto.html" class="centralizar" target="_self">Vamos lá!</a>
+                        <figcaption>Fonte: Cacau Reporter</figcaption>
+                    </figure>
+                </div>
+
+            </ul>
+            </div>
             </figure>
             <!-- A tag <section> é usada para agrupar conteúdo que está tematicamente relacionado. -->
         </section>
 
         <section>
-            <h2>Praça Ginda Bloch</h2>
-            <hr>
+            <hr class="linha-colorida">
+            <h2 class="centralizar">Praça Ginda Bloch:</h2>
+            <ul class="centralizar">
+                <li class="text-ginda-paragrafo1">A Praça Ginda Bloch, também localizada no bairro do Alto, é um espaço
+                    multifuncional
+                    que
+                    recebe diversos
+                    eventos de comida, música e cultura, se tornando um ponto de encontro popular entre moradores e
+                    turistas.</p>
+                <li class="txt-feirinha-do-alto-paragrafo2">A Praça Ginda Bloch sempre foi muito conhecida justamente
+                    por ser o
+                    grande
+                    ponto turístico de Teresópolis
+                    por ser contemplar grandes eventos, atraindo diversos turistas!</li>
 
-            <p>A Praça Ginda Bloch, também localizada no bairro do Alto, é um espaço multifuncional que recebe diversos
-                eventos de comida, música e cultura, se tornando um ponto de encontro popular entre moradores e
-                turistas.</p>
-            <li>A Feirinha do alto sempre foi muito conhecida justamente por ser o grande ponto turístico de Teresópolis
-                por simplesmente estar na entrada da cidade, atraindo diversos turistas!</li>
-
-            <figure>
-                <img src="Escola Ginda Bloch_Google.jpg" width="400 " height="200"
-                    alt="Vista panorâmica da Praça Ginda Bloch, mostrando a área verde, o espaço para eventos e a arquitetura ao redor.">
-                <a href="GindaBloch.html" target="_blank">Vamos lá!</a>
-                <figcaption>Fonte: Totó Online</figcaption>
-                <hr>
+                <figure class="centralizar">
+                    <img style="border: 1px solid black; box-shadow: 5px 5px 15px black;" src="Escola Ginda Bloch_Google.jpg" width="400 " height="200"
+                        alt="Vista panorâmica da Praça Ginda Bloch, mostrando a área verde, o espaço para eventos e a arquitetura ao redor.">
+                    <br>
+                    <a href="GindaBloch.html" class="centralizar" target="_self">Vamos lá!</a>
+                    <figcaption>Fonte: Totó Online</figcaption>
+            </ul>
+            <hr class="linha-colorida">
             </figure>
         </section>
 
     </main>
 
-    <footer>
+    <footer class="centralizar">
         <p>&copy; 2025 Guia Turístico de Teresópolis</p>
     </footer>
 
